--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,13 @@
  <scope>provided</scope>
 </dependency>
 
-
+<!--this dependency belongs to JDBC -->
+<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java --> 
+<dependency>
+ <groupId>mysql</groupId> 
+   <artifactId>mysql-connector-java</artifactId> 
+   <version>8.0.28</version> 
+</dependency> 
 
 </dependencies>
 
